<resources>
    <string name="app_name">Weight Manager</string>
    <string name="msg_write_weight">Today\'s Weight</string>
    <string name="msg_write_weight_success">몸무게 입력 성공!!!</string>
    <string name="msg_write_weight_fail">몸무게 입력 실패!!!</string>
    <string name="hint_write_weight">80.0</string>
    <string name="kilogram">kg</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="network_disconnect">네트워크 연결 확인</string>
    <string name="msg_network_disconnect">네트워크 연결상태가 양호하지 않습니다.\n연결상태 확인 후 다시 실행해 주세요.</string>
    <string name="daily">Daily</string>
    <string name="menu_item_goal">Goal</string>
    <string name="menu_item_alram">Alarm</string>
    <string name="menu_item_version">Version</string>
    <string name="menu_item_logout">Logout</string>
    <string name="msg_write_goal">목표 체중을 입력해 주세요.</string>
    <string name="msg_set_alarm">알람 시간을 설정해 주세요.</string>
    <string name="new_version">NEW</string>
    <string name="msg_logout">로그아웃 하시겠습니까?</string>
    <string name="msg_re_logout">로그아웃 실패 다시 시도해 주세요.</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="msg_put_today_weight">오늘의 체중을 입력하세요.</string>
    <string name="google_sign_in">Sign In With Google</string>
</resources>