<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/item_goal"
        android:title="@string/menu_item_goal"
        android:icon="@drawable/menu_item_goal"
        />
    <item
        android:id="@+id/item_alarm"
        android:title="@string/menu_item_alram"
        android:icon="@drawable/menu_item_alarm"
        />
    <item
        android:id="@+id/item_version"
        android:title="@string/menu_item_version"
        app:actionViewClass="android.widget.TextView"
        android:icon="@drawable/menu_item_version"
        />
    <item
        android:id="@+id/item_logout"
        android:title="@string/menu_item_logout"
        android:icon="@drawable/menu_item_logout"
        />

</menu>