<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="24dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/msg_logout"
            android:layout_gravity="center"
            android:textSize="16dp"
            android:textColor="#000000"
            />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="24dp"
            >

            <Button
                android:id="@+id/bt_cancel"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:text="@string/cancel"
                />

            <Button
                android:id="@+id/bt_ok"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginLeft="12dp"
                android:layout_weight="1"
                android:text="@string/ok"
                />


        </LinearLayout>

    </LinearLayout>




</FrameLayout>