<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@color/cmyk_blue"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:padding="24dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/msg_write_goal"
            android:layout_gravity="center"
            android:textSize="20dp"
            android:fontFamily="@font/silk_regular"
            android:textStyle="bold"
            android:textColor="@color/cmyk_yellow"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="12dp"
            android:gravity="right"
            android:padding="8dp"
            android:background="@color/cmyk_white"
            >

            <EditText
                android:id="@+id/et_weight"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="numberDecimal"
                android:hint="80.0"
                android:gravity="right"
                android:paddingRight="4dp"
                android:background="@null"
                android:textColor="@color/cmyk_purple"
                android:textColorHint="@color/cmyk_blue"
                android:fontFamily="@font/silk_regular"
                android:textSize="20dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kilogram"
                android:textSize="14dp"
                android:fontFamily="@font/silk_regular"
                android:textColor="@color/cmyk_purple"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            >

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bt_cancel"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:text="@string/cancel"
                android:background="@color/cmyk_pink"
                android:textColor="@color/cmyk_white"
                android:textSize="18dp"
                android:fontFamily="@font/silk_regular"
                />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bt_ok"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginLeft="12dp"
                android:layout_weight="1"
                android:text="@string/ok"
                android:background="@color/cmyk_pink"
                android:textColor="@color/cmyk_white"
                android:textSize="18dp"
                android:fontFamily="@font/silk_regular"
                />


        </LinearLayout>

    </LinearLayout>




</FrameLayout>